--- a/css/main-new.css
+++ b/css/main-new.css
@@ -505,6 +505,7 @@ body {
     background-color: rgb(0, 27, 56);
 }
 .similar__pic {
+    display: block;
     position: relative;
     width: 100%;
     background-size: cover;
